fix: siderbar layout trigger has unnecessary z-index

--- a/components/layout/style/index.less
+++ b/components/layout/style/index.less
@@ -86,7 +86,6 @@
     &-trigger {
       position: fixed;
       bottom: 0;
-      z-index: 1;
       height: @layout-trigger-height;
       color: @layout-trigger-color;
       line-height: @layout-trigger-height;
